Cleaned up UI for contact box and login page

--- a/Frontend/login/loginpage.html
+++ b/Frontend/login/loginpage.html
@@ -50,7 +50,7 @@
           <a href="/register/register.html">Don't have an account? Sign Up</a>
         </div>
         <div class="image-container">
-          <img src="/images/car-garage.jpg" alt="Race Car in Garage" />
+          <img src="/karwebsite/src/components/login-bkg-img.jpg" alt="Car Background" />
         </div>
       </div>
     </main>
