--- a/karwebsite/public/index.html
+++ b/karwebsite/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' data: 'unsafe-inline' 'unsafe-eval' calendly.com *.calendly.com assets.calendly.com; script-src * 'self' 'unsafe-inline' 'unsafe-eval' calendly.com *.calendly.com assets.calendly.com; style-src * 'self' 'unsafe-inline'; img-src * data: blob: 'self'; font-src * 'self' data:; connect-src *;"/>
     <meta
       name="description"
       content="Web site created using create-react-app"
